--- a/Resources/character/daigoro.plist
+++ b/Resources/character/daigoro.plist
@@ -7,7 +7,7 @@
 			<key>daigoro_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1921},{21,33}}</string>
+				<string>{{96,1921},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -21,7 +21,7 @@
 			<key>daigoro_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1853},{22,33}}</string>
+				<string>{{29,1881},{22,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -35,7 +35,7 @@
 			<key>daigoro_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1887},{22,33}}</string>
+				<string>{{51,1950},{22,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -49,7 +49,7 @@
 			<key>daigoro_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{23,1853},{21,33}}</string>
+				<string>{{75,1887},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -63,7 +63,7 @@
 			<key>daigoro_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{22,1989},{21,33}}</string>
+				<string>{{74,1853},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -77,7 +77,7 @@
 			<key>daigoro_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{22,1955},{21,33}}</string>
+				<string>{{74,1989},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -91,7 +91,7 @@
 			<key>daigoro_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{23,1887},{21,33}}</string>
+				<string>{{96,1989},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -102,10 +102,38 @@
 				<string>{32,33}</string>
 			</dict>
 
+			<key>daigoro_2_0_0.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{51,1984},{22,32}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{19,16},{22,32}}</string>
+				<key>sourceSize</key>
+				<string>{64,64}</string>
+			</dict>
+
+			<key>daigoro_2_0_1.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{28,1916},{24,33}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{18,16},{24,33}}</string>
+				<key>sourceSize</key>
+				<string>{64,64}</string>
+			</dict>
+
 			<key>daigoro_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1989},{21,33}}</string>
+				<string>{{96,1955},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -119,7 +147,7 @@
 			<key>daigoro_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1955},{21,33}}</string>
+				<string>{{52,1853},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -133,7 +161,7 @@
 			<key>daigoro_3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{44,1955},{21,33}}</string>
+				<string>{{53,1887},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -147,7 +175,7 @@
 			<key>daigoro_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{44,1921},{21,33}}</string>
+				<string>{{74,1921},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -161,7 +189,7 @@
 			<key>daigoro_3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{22,1921},{21,33}}</string>
+				<string>{{74,1955},{21,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -170,6 +198,90 @@
 				<string>{{5,0},{21,33}}</string>
 				<key>sourceSize</key>
 				<string>{32,33}</string>
+			</dict>
+
+			<key>daigoro_a_0_0.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,1950},{27,34}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{18,15},{27,34}}</string>
+				<key>sourceSize</key>
+				<string>{64,64}</string>
+			</dict>
+
+			<key>daigoro_a_0_1.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,1881},{28,34}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{18,15},{28,34}}</string>
+				<key>sourceSize</key>
+				<string>{64,64}</string>
+			</dict>
+
+			<key>daigoro_a_1_0.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{28,1950},{22,32}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{18,16},{22,32}}</string>
+				<key>sourceSize</key>
+				<string>{64,64}</string>
+			</dict>
+
+			<key>daigoro_a_1_1.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{26,1985},{24,33}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{17,16},{24,33}}</string>
+				<key>sourceSize</key>
+				<string>{64,64}</string>
+			</dict>
+
+			<key>daigoro_a_3_0.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,1985},{25,33}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{20,15},{25,33}}</string>
+				<key>sourceSize</key>
+				<string>{64,64}</string>
+			</dict>
+
+			<key>daigoro_a_3_1.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,1916},{27,33}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{20,15},{27,33}}</string>
+				<key>sourceSize</key>
+				<string>{64,64}</string>
 			</dict>
 
 			<key>daigoro_s_0.png</key>
@@ -231,7 +343,7 @@
 			<key>daigoro_s_4.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{444,0},{443,1171}}</string>
+				<string>{{0,0},{443,1171}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -273,7 +385,7 @@
 			<key>daigoro_s_7.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,0},{443,1171}}</string>
+				<string>{{444,0},{443,1171}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -282,6 +394,20 @@
 				<string>{{210,14},{443,1171}}</string>
 				<key>sourceSize</key>
 				<string>{800,1200}</string>
+			</dict>
+
+			<key>effect_kick.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,1853},{38,27}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{12,28},{38,27}}</string>
+				<key>sourceSize</key>
+				<string>{64,64}</string>
 			</dict>
 
 		</dict>
