--- a/Resources_original/img/character/kenshin/kenshin.plist
+++ b/Resources_original/img/character/kenshin/kenshin.plist
@@ -7,7 +7,7 @@
 			<key>kenshin_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3829},{21,32}}</string>
+				<string>{{0,3822},{21,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -21,7 +21,7 @@
 			<key>kenshin_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3630},{23,32}}</string>
+				<string>{{0,3559},{23,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -35,7 +35,7 @@
 			<key>kenshin_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3597},{23,32}}</string>
+				<string>{{0,3592},{23,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -49,7 +49,7 @@
 			<key>kenshin_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,4057},{20,32}}</string>
+				<string>{{21,3953},{20,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -63,7 +63,7 @@
 			<key>kenshin_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,4024},{20,32}}</string>
+				<string>{{0,3986},{20,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -77,7 +77,7 @@
 			<key>kenshin_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3991},{20,32}}</string>
+				<string>{{0,3953},{20,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -91,7 +91,7 @@
 			<key>kenshin_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{21,4024},{20,32}}</string>
+				<string>{{0,3920},{20,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -105,7 +105,7 @@
 			<key>kenshin_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{21,3958},{20,32}}</string>
+				<string>{{0,4019},{20,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -119,7 +119,7 @@
 			<key>kenshin_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3958},{20,32}}</string>
+				<string>{{0,4052},{20,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -133,7 +133,7 @@
 			<key>kenshin_3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3893},{21,32}}</string>
+				<string>{{0,3887},{21,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -147,7 +147,7 @@
 			<key>kenshin_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3796},{22,32}}</string>
+				<string>{{0,3725},{22,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -161,7 +161,7 @@
 			<key>kenshin_3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3763},{22,32}}</string>
+				<string>{{0,3692},{22,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -175,7 +175,7 @@
 			<key>kenshin_a_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3829},{21,32}}</string>
+				<string>{{0,3822},{21,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -189,7 +189,7 @@
 			<key>kenshin_a_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3862},{21,30}}</string>
+				<string>{{0,3791},{21,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -203,7 +203,7 @@
 			<key>kenshin_a_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3926},{21,31}}</string>
+				<string>{{0,3855},{21,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -217,7 +217,7 @@
 			<key>kenshin_a_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,4057},{20,32}}</string>
+				<string>{{21,3953},{20,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -231,7 +231,7 @@
 			<key>kenshin_a_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{21,3991},{20,32}}</string>
+				<string>{{21,3920},{20,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -245,7 +245,7 @@
 			<key>kenshin_a_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3663},{22,32}}</string>
+				<string>{{0,3625},{22,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -259,7 +259,7 @@
 			<key>kenshin_a_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{21,4024},{20,32}}</string>
+				<string>{{0,3920},{20,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -273,7 +273,7 @@
 			<key>kenshin_a_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3696},{22,32}}</string>
+				<string>{{0,3758},{22,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -287,7 +287,7 @@
 			<key>kenshin_a_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3531},{24,32}}</string>
+				<string>{{0,3493},{24,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -301,7 +301,7 @@
 			<key>kenshin_a__3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3893},{21,32}}</string>
+				<string>{{0,3887},{21,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -315,7 +315,7 @@
 			<key>kenshin_a__3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3564},{23,32}}</string>
+				<string>{{0,3526},{23,32}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -329,7 +329,7 @@
 			<key>kenshin_a__3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,3729},{22,33}}</string>
+				<string>{{0,3658},{22,33}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -343,7 +343,7 @@
 			<key>kenshin_s_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,2354},{420,1176}}</string>
+				<string>{{421,1139},{420,1176}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -357,7 +357,7 @@
 			<key>kenshin_s_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,2354},{420,1176}}</string>
+				<string>{{421,1139},{420,1176}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -371,7 +371,7 @@
 			<key>kenshin_s_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,2354},{420,1176}}</string>
+				<string>{{421,1139},{420,1176}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -385,7 +385,7 @@
 			<key>kenshin_s_3.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1177},{420,1176}}</string>
+				<string>{{0,2316},{420,1176}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -399,13 +399,27 @@
 			<key>kenshin_s_4.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,0},{420,1176}}</string>
+				<string>{{0,1139},{420,1176}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
 				<string>{{219,9},{420,1176}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>kenshin_s_99.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,0},{796,1138}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{3,15},{796,1138}}</string>
 				<key>sourceSize</key>
 				<string>{800,1200}</string>
 			</dict>
@@ -417,7 +431,7 @@
 			<key>format</key>
 			<integer>2</integer>
 			<key>size</key>
-			<string>{512,4096}</string>
+			<string>{1024,4096}</string>
 			<key>textureFileName</key>
 			<string>kenshin.png</string>
 			</dict>
