--- a/Resources_original/img/character/nadeshiko/nadeshiko.plist
+++ b/Resources_original/img/character/nadeshiko/nadeshiko.plist
@@ -7,7 +7,7 @@
 			<key>nadeshiko_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1256},{21,30}}</string>
+				<string>{{0,3298},{21,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -21,7 +21,7 @@
 			<key>nadeshiko_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1225},{21,30}}</string>
+				<string>{{0,3267},{21,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -35,7 +35,7 @@
 			<key>nadeshiko_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1287},{21,30}}</string>
+				<string>{{0,3360},{21,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -49,7 +49,7 @@
 			<key>nadeshiko_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1380},{20,30}}</string>
+				<string>{{0,3453},{20,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -63,7 +63,7 @@
 			<key>nadeshiko_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1442},{20,30}}</string>
+				<string>{{0,3515},{20,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -77,7 +77,7 @@
 			<key>nadeshiko_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1349},{20,30}}</string>
+				<string>{{0,3422},{20,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -91,7 +91,7 @@
 			<key>nadeshiko_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1318},{20,30}}</string>
+				<string>{{0,3391},{20,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -105,7 +105,7 @@
 			<key>nadeshiko_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1411},{20,30}}</string>
+				<string>{{0,3484},{20,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -119,7 +119,7 @@
 			<key>nadeshiko_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1473},{20,30}}</string>
+				<string>{{0,3546},{20,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -133,7 +133,7 @@
 			<key>nadeshiko_3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1194},{21,30}}</string>
+				<string>{{0,3329},{21,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -147,7 +147,7 @@
 			<key>nadeshiko_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1163},{21,30}}</string>
+				<string>{{0,3236},{21,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -161,7 +161,7 @@
 			<key>nadeshiko_3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1132},{21,30}}</string>
+				<string>{{0,3205},{21,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -175,7 +175,7 @@
 			<key>nadeshiko_s_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{334,0},{333,1131}}</string>
+				<string>{{0,2073},{333,1131}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -189,7 +189,7 @@
 			<key>nadeshiko_s_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{334,0},{333,1131}}</string>
+				<string>{{0,2073},{333,1131}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -203,7 +203,7 @@
 			<key>nadeshiko_s_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{668,0},{333,1131}}</string>
+				<string>{{334,941},{333,1131}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -217,7 +217,7 @@
 			<key>nadeshiko_s_3.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{1002,0},{333,1131}}</string>
+				<string>{{334,2073},{333,1131}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -231,13 +231,27 @@
 			<key>nadeshiko_s_4.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,0},{333,1131}}</string>
+				<string>{{0,941},{333,1131}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
 				<string>{{233,54},{333,1131}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>nadeshiko_s_99.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,0},{748,940}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{7,66},{748,940}}</string>
 				<key>sourceSize</key>
 				<string>{800,1200}</string>
 			</dict>
@@ -249,7 +263,7 @@
 			<key>format</key>
 			<integer>2</integer>
 			<key>size</key>
-			<string>{2048,2048}</string>
+			<string>{1024,4096}</string>
 			<key>textureFileName</key>
 			<string>nadeshiko.png</string>
 			</dict>
