--- a/Resources_original/img/character/syuka/syuka.plist
+++ b/Resources_original/img/character/syuka/syuka.plist
@@ -7,7 +7,7 @@
 			<key>syuka_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1306},{31,29}}</string>
+				<string>{{0,3531},{31,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -21,7 +21,7 @@
 			<key>syuka_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1276},{31,29}}</string>
+				<string>{{0,3501},{31,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -35,7 +35,7 @@
 			<key>syuka_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1336},{31,29}}</string>
+				<string>{{0,3591},{31,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -49,7 +49,7 @@
 			<key>syuka_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1426},{25,29}}</string>
+				<string>{{0,3681},{25,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -63,7 +63,7 @@
 			<key>syuka_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1486},{25,29}}</string>
+				<string>{{0,3741},{25,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -77,7 +77,7 @@
 			<key>syuka_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1396},{25,29}}</string>
+				<string>{{0,3651},{25,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -91,7 +91,7 @@
 			<key>syuka_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1366},{25,29}}</string>
+				<string>{{0,3621},{25,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -105,7 +105,7 @@
 			<key>syuka_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1456},{25,29}}</string>
+				<string>{{0,3711},{25,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -119,7 +119,7 @@
 			<key>syuka_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1516},{25,29}}</string>
+				<string>{{0,3771},{25,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -133,7 +133,7 @@
 			<key>syuka_3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1246},{31,29}}</string>
+				<string>{{0,3561},{31,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -147,7 +147,7 @@
 			<key>syuka_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1216},{31,29}}</string>
+				<string>{{0,3471},{31,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -161,7 +161,7 @@
 			<key>syuka_3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1186},{31,29}}</string>
+				<string>{{0,3441},{31,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -175,7 +175,7 @@
 			<key>syuka_s_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{505,0},{504,1185}}</string>
+				<string>{{0,2255},{504,1185}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -189,7 +189,7 @@
 			<key>syuka_s_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{505,0},{504,1185}}</string>
+				<string>{{0,2255},{504,1185}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -203,7 +203,7 @@
 			<key>syuka_s_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{1010,0},{504,1185}}</string>
+				<string>{{505,1069},{504,1185}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -217,7 +217,7 @@
 			<key>syuka_s_3.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{1515,0},{504,1185}}</string>
+				<string>{{505,2255},{504,1185}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -231,13 +231,27 @@
 			<key>syuka_s_4.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,0},{504,1185}}</string>
+				<string>{{0,1069},{504,1185}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
 				<string>{{154,0},{504,1185}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>syuka_s_99.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,0},{623,1068}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{72,112},{623,1068}}</string>
 				<key>sourceSize</key>
 				<string>{800,1200}</string>
 			</dict>
@@ -249,7 +263,7 @@
 			<key>format</key>
 			<integer>2</integer>
 			<key>size</key>
-			<string>{2048,2048}</string>
+			<string>{1024,4096}</string>
 			<key>textureFileName</key>
 			<string>syuka.png</string>
 			</dict>
