--- a/Resources_original/img/character/yae/yae.plist
+++ b/Resources_original/img/character/yae/yae.plist
@@ -7,7 +7,7 @@
 			<key>yae_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,58},{24,28}}</string>
+				<string>{{0,456},{24,28}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -21,7 +21,7 @@
 			<key>yae_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,0},{24,28}}</string>
+				<string>{{0,398},{24,28}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -35,7 +35,7 @@
 			<key>yae_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,29},{24,28}}</string>
+				<string>{{0,427},{24,28}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -49,7 +49,7 @@
 			<key>yae_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{48,90},{23,29}}</string>
+				<string>{{49,458},{23,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -63,7 +63,7 @@
 			<key>yae_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{48,60},{23,29}}</string>
+				<string>{{49,428},{23,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -77,7 +77,7 @@
 			<key>yae_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{25,30},{23,29}}</string>
+				<string>{{49,398},{23,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -91,7 +91,7 @@
 			<key>yae_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{25,0},{23,29}}</string>
+				<string>{{25,458},{23,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -105,7 +105,7 @@
 			<key>yae_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{24,87},{23,29}}</string>
+				<string>{{25,428},{23,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -119,7 +119,7 @@
 			<key>yae_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,87},{23,29}}</string>
+				<string>{{25,398},{23,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -133,7 +133,7 @@
 			<key>yae_3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{72,0},{22,29}}</string>
+				<string>{{73,398},{22,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -147,7 +147,7 @@
 			<key>yae_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{49,0},{22,29}}</string>
+				<string>{{73,458},{22,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -161,7 +161,7 @@
 			<key>yae_3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{49,30},{22,29}}</string>
+				<string>{{73,428},{22,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -172,6 +172,90 @@
 				<string>{32,33}</string>
 			</dict>
 
+			<key>yae_m_0.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{199,199},{198,198}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{0,0},{198,198}}</string>
+				<key>sourceSize</key>
+				<string>{198,198}</string>
+			</dict>
+
+			<key>yae_m_1.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{199,199},{198,198}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{0,0},{198,198}}</string>
+				<key>sourceSize</key>
+				<string>{198,198}</string>
+			</dict>
+
+			<key>yae_m_2.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{199,199},{198,198}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{0,0},{198,198}}</string>
+				<key>sourceSize</key>
+				<string>{198,198}</string>
+			</dict>
+
+			<key>yae_m_3.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{199,0},{198,198}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{0,0},{198,198}}</string>
+				<key>sourceSize</key>
+				<string>{198,198}</string>
+			</dict>
+
+			<key>yae_m_4.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,199},{198,198}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{0,0},{198,198}}</string>
+				<key>sourceSize</key>
+				<string>{198,198}</string>
+			</dict>
+
+			<key>yae_m_5.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,0},{198,198}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{0,0},{198,198}}</string>
+				<key>sourceSize</key>
+				<string>{198,198}</string>
+			</dict>
+
 		</dict>
 
 		<key>metadata</key>
@@ -179,7 +263,7 @@
 			<key>format</key>
 			<integer>2</integer>
 			<key>size</key>
-			<string>{128,128}</string>
+			<string>{512,512}</string>
 			<key>textureFileName</key>
 			<string>yae.png</string>
 			</dict>
