とりあえず戻れるように

--- a/Resources/event/TOWER-1F-eastcorridor.json
+++ b/Resources/event/TOWER-1F-eastcorridor.json
@@ -705,7 +705,7 @@
 							"imgID":"1"
 						},
 						{
-							"text":["俺にも守らせろ？","お前にばっか美味しいところは\n持って行かせねぇよ"],
+							"text":["俺にも守らせろ？","お前ばっか美味しいところ\n持って行きやがって！"],
 							"charaID":"5",
 							"imgID":"2"
 						},
@@ -813,7 +813,7 @@
 					"imgID":"3"
 				},
 				{
-					"text":["おう、任せろ！"],
+					"text":["おう、任せろぃ！"],
 					"charaID":"8",
 					"imgID":"3"
 				}
