大宝過去編まで表現修正
サンプルコミット

--- a/Resources/event/TOWER-1F-eastcorridor.json
+++ b/Resources/event/TOWER-1F-eastcorridor.json
@@ -960,6 +960,20 @@
 					]
 				}
 			]
+		},
+		{
+			"type":"if",
+			"condition":[
+				{
+					"Nevent":["50","8"]
+				}
+			],
+			"action":[
+				{
+					"type":"systemMsg",
+					"text":["下から風が吹き込んでいる"]
+				}
+			]
 		}
 	],
 	"9":[
