不要な設定の削除

--- a/Resources/config/DebugConfig.json
+++ b/Resources/config/DebugConfig.json
@@ -1,7 +1,5 @@
 {
 	"stats":false,
 	"debug_mask":false,
-	"invincible_mode":false,
-    "plain_data":true,
-    "crypt_trigger":false
+	"invincible_mode":false
 }
