おまけ部屋修正

--- a/Resources/config/DebugConfig.json
+++ b/Resources/config/DebugConfig.json
@@ -1,5 +1,7 @@
 {
 	"stats":false,
 	"debug_mask":false,
-	"invincible_mode":false
+	"invincible_mode":false,
+    "plain_data":true,
+    "crypt_trigger":false
 }
