--- a/Resources/character/Ctaihou.plist
+++ b/Resources/character/Ctaihou.plist
@@ -7,7 +7,7 @@
 			<key>Ctaihou_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,458},{23,28}}</string>
+				<string>{{0,4038},{23,28}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -21,7 +21,7 @@
 			<key>Ctaihou_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{24,427},{23,28}}</string>
+				<string>{{0,4067},{23,28}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -35,7 +35,7 @@
 			<key>Ctaihou_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{24,456},{23,28}}</string>
+				<string>{{24,3945},{23,28}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -49,7 +49,7 @@
 			<key>Ctaihou_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{48,456},{21,29}}</string>
+				<string>{{24,4034},{21,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -63,7 +63,7 @@
 			<key>Ctaihou_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{70,456},{21,29}}</string>
+				<string>{{46,3974},{21,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -77,7 +77,7 @@
 			<key>Ctaihou_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{70,396},{21,29}}</string>
+				<string>{{24,4064},{21,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -91,7 +91,7 @@
 			<key>Ctaihou_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{48,426},{21,29}}</string>
+				<string>{{46,4004},{21,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -105,7 +105,7 @@
 			<key>Ctaihou_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{48,396},{21,29}}</string>
+				<string>{{24,3974},{21,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -119,7 +119,7 @@
 			<key>Ctaihou_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{70,426},{21,29}}</string>
+				<string>{{24,4004},{21,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -133,7 +133,7 @@
 			<key>Ctaihou_3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{24,396},{23,30}}</string>
+				<string>{{0,4007},{23,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -147,7 +147,7 @@
 			<key>Ctaihou_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,427},{23,30}}</string>
+				<string>{{0,3976},{23,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -161,7 +161,7 @@
 			<key>Ctaihou_3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,396},{23,30}}</string>
+				<string>{{0,3945},{23,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -175,7 +175,7 @@
 			<key>Ctaihou_m_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{187,0},{186,197}}</string>
+				<string>{{187,3351},{186,197}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -189,7 +189,7 @@
 			<key>Ctaihou_m_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{187,0},{186,197}}</string>
+				<string>{{187,3351},{186,197}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -203,7 +203,7 @@
 			<key>Ctaihou_m_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{187,0},{186,197}}</string>
+				<string>{{187,3351},{186,197}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -217,7 +217,7 @@
 			<key>Ctaihou_m_3.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{374,0},{186,197}}</string>
+				<string>{{187,3153},{186,197}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -231,7 +231,7 @@
 			<key>Ctaihou_m_4.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{187,198},{186,197}}</string>
+				<string>{{0,3747},{186,197}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -245,7 +245,7 @@
 			<key>Ctaihou_m_5.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{374,198},{186,197}}</string>
+				<string>{{0,3549},{186,197}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -259,7 +259,7 @@
 			<key>Ctaihou_m_6.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,198},{186,197}}</string>
+				<string>{{0,3351},{186,197}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -273,7 +273,7 @@
 			<key>Ctaihou_m_7.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,0},{186,197}}</string>
+				<string>{{0,3153},{186,197}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -284,6 +284,118 @@
 				<string>{198,198}</string>
 			</dict>
 
+			<key>Ctaihou_s_0.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,2102},{399,1050}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{142,135},{399,1050}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>Ctaihou_s_1.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,2102},{399,1050}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{142,135},{399,1050}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>Ctaihou_s_2.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,2102},{399,1050}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{142,135},{399,1050}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>Ctaihou_s_3.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{400,1051},{399,1050}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{142,135},{399,1050}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>Ctaihou_s_4.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{400,0},{399,1050}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{142,135},{399,1050}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>Ctaihou_s_5.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{400,2102},{399,1050}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{142,135},{399,1050}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>Ctaihou_s_6.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,1051},{399,1050}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{142,135},{399,1050}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>Ctaihou_s_7.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,0},{399,1050}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{142,135},{399,1050}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
 		</dict>
 
 		<key>metadata</key>
@@ -291,7 +403,7 @@
 			<key>format</key>
 			<integer>2</integer>
 			<key>size</key>
-			<string>{1024,512}</string>
+			<string>{1024,4096}</string>
 			<key>textureFileName</key>
 			<string>Ctaihou.png</string>
 			</dict>
