--- a/Resources/character/yae.plist
+++ b/Resources/character/yae.plist
@@ -7,7 +7,7 @@
 			<key>yae_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,456},{24,28}}</string>
+				<string>{{0,3965},{24,28}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -21,7 +21,7 @@
 			<key>yae_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,398},{24,28}}</string>
+				<string>{{0,3907},{24,28}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -35,7 +35,7 @@
 			<key>yae_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,427},{24,28}}</string>
+				<string>{{0,3936},{24,28}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -49,7 +49,7 @@
 			<key>yae_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{49,458},{23,29}}</string>
+				<string>{{24,4054},{23,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -63,7 +63,7 @@
 			<key>yae_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{49,428},{23,29}}</string>
+				<string>{{24,4024},{23,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -77,7 +77,7 @@
 			<key>yae_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{49,398},{23,29}}</string>
+				<string>{{24,3994},{23,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -91,7 +91,7 @@
 			<key>yae_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{25,458},{23,29}}</string>
+				<string>{{0,4054},{23,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -105,7 +105,7 @@
 			<key>yae_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{25,428},{23,29}}</string>
+				<string>{{0,4024},{23,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -119,7 +119,7 @@
 			<key>yae_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{25,398},{23,29}}</string>
+				<string>{{0,3994},{23,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -133,7 +133,7 @@
 			<key>yae_3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{73,398},{22,29}}</string>
+				<string>{{48,3907},{22,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -147,7 +147,7 @@
 			<key>yae_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{73,458},{22,29}}</string>
+				<string>{{25,3937},{22,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -161,7 +161,7 @@
 			<key>yae_3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{73,428},{22,29}}</string>
+				<string>{{25,3907},{22,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -175,7 +175,7 @@
 			<key>yae_m_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{199,199},{198,198}}</string>
+				<string>{{0,3111},{198,198}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -189,7 +189,7 @@
 			<key>yae_m_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{199,199},{198,198}}</string>
+				<string>{{0,3111},{198,198}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -203,7 +203,7 @@
 			<key>yae_m_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{199,199},{198,198}}</string>
+				<string>{{0,3111},{198,198}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -217,7 +217,7 @@
 			<key>yae_m_3.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{199,0},{198,198}}</string>
+				<string>{{0,3509},{198,198}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -231,7 +231,7 @@
 			<key>yae_m_4.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,199},{198,198}}</string>
+				<string>{{0,3310},{198,198}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -245,7 +245,7 @@
 			<key>yae_m_5.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,0},{198,198}}</string>
+				<string>{{0,3708},{198,198}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -256,6 +256,90 @@
 				<string>{198,198}</string>
 			</dict>
 
+			<key>yae_s_0.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,2074},{394,1036}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{158,149},{394,1036}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>yae_s_1.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,2074},{394,1036}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{158,149},{394,1036}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>yae_s_2.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,2074},{394,1036}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{158,149},{394,1036}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>yae_s_3.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,1037},{394,1036}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{158,149},{394,1036}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>yae_s_4.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,0},{394,1036}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{158,149},{394,1036}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>yae_s_5.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,0},{394,1036}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{158,149},{394,1036}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
 		</dict>
 
 		<key>metadata</key>
@@ -263,7 +347,7 @@
 			<key>format</key>
 			<integer>2</integer>
 			<key>size</key>
-			<string>{512,512}</string>
+			<string>{512,4096}</string>
 			<key>textureFileName</key>
 			<string>yae.png</string>
 			</dict>
