--- a/Resources/character/yoshitune.plist
+++ b/Resources/character/yoshitune.plist
@@ -7,7 +7,7 @@
 			<key>yoshitune_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{24,427},{23,28}}</string>
+				<string>{{0,3851},{23,28}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -21,7 +21,7 @@
 			<key>yoshitune_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{24,456},{23,28}}</string>
+				<string>{{0,3911},{23,28}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -35,7 +35,7 @@
 			<key>yoshitune_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{24,398},{23,28}}</string>
+				<string>{{0,3940},{23,28}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -49,7 +49,7 @@
 			<key>yoshitune_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{48,458},{21,29}}</string>
+				<string>{{0,4029},{21,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -63,7 +63,7 @@
 			<key>yoshitune_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{70,398},{21,29}}</string>
+				<string>{{22,3999},{21,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -77,7 +77,7 @@
 			<key>yoshitune_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{48,398},{21,29}}</string>
+				<string>{{0,4059},{21,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -91,7 +91,7 @@
 			<key>yoshitune_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{48,428},{21,29}}</string>
+				<string>{{0,3999},{21,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -105,7 +105,7 @@
 			<key>yoshitune_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{70,458},{21,29}}</string>
+				<string>{{0,3969},{21,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -119,7 +119,7 @@
 			<key>yoshitune_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{70,428},{21,29}}</string>
+				<string>{{22,3969},{21,29}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -133,7 +133,7 @@
 			<key>yoshitune_3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,460},{23,30}}</string>
+				<string>{{0,3880},{23,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -147,7 +147,7 @@
 			<key>yoshitune_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,429},{23,30}}</string>
+				<string>{{0,3820},{23,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -161,7 +161,7 @@
 			<key>yoshitune_3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,398},{23,30}}</string>
+				<string>{{0,3789},{23,30}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -175,7 +175,7 @@
 			<key>yoshitune_m_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{199,0},{198,198}}</string>
+				<string>{{0,3590},{198,198}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -189,7 +189,7 @@
 			<key>yoshitune_m_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{199,0},{198,198}}</string>
+				<string>{{0,3590},{198,198}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -203,7 +203,7 @@
 			<key>yoshitune_m_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{199,0},{198,198}}</string>
+				<string>{{0,3590},{198,198}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -217,7 +217,7 @@
 			<key>yoshitune_m_3.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,199},{198,198}}</string>
+				<string>{{0,3391},{198,198}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -231,7 +231,7 @@
 			<key>yoshitune_m_4.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,0},{198,198}}</string>
+				<string>{{0,3192},{198,198}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -242,6 +242,76 @@
 				<string>{198,198}</string>
 			</dict>
 
+			<key>yoshitune_s_0.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,2128},{472,1063}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{144,122},{472,1063}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>yoshitune_s_1.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,2128},{472,1063}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{144,122},{472,1063}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>yoshitune_s_2.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,2128},{472,1063}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{144,122},{472,1063}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>yoshitune_s_3.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,1064},{472,1063}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{144,122},{472,1063}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>yoshitune_s_4.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,0},{472,1063}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{144,122},{472,1063}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
 		</dict>
 
 		<key>metadata</key>
@@ -249,7 +319,7 @@
 			<key>format</key>
 			<integer>2</integer>
 			<key>size</key>
-			<string>{512,512}</string>
+			<string>{512,4096}</string>
 			<key>textureFileName</key>
 			<string>yoshitune.png</string>
 			</dict>
