--- a/Resources_original/img/character/teacher/teacher.plist
+++ b/Resources_original/img/character/teacher/teacher.plist
@@ -7,7 +7,7 @@
 			<key>teacher_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{46,0},{21,31}}</string>
+				<string>{{0,1790},{21,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -21,7 +21,7 @@
 			<key>teacher_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,64},{22,31}}</string>
+				<string>{{0,1598},{22,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -35,7 +35,7 @@
 			<key>teacher_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{23,32},{22,31}}</string>
+				<string>{{0,1758},{22,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -49,7 +49,7 @@
 			<key>teacher_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{23,64},{22,31}}</string>
+				<string>{{0,1726},{22,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -63,7 +63,7 @@
 			<key>teacher_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{23,0},{22,31}}</string>
+				<string>{{0,1694},{22,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -77,7 +77,7 @@
 			<key>teacher_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,32},{22,31}}</string>
+				<string>{{0,1566},{22,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -91,7 +91,7 @@
 			<key>teacher_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,0},{22,31}}</string>
+				<string>{{0,1630},{22,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -105,7 +105,7 @@
 			<key>teacher_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{23,96},{22,31}}</string>
+				<string>{{0,1662},{22,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -119,7 +119,7 @@
 			<key>teacher_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,96},{22,31}}</string>
+				<string>{{0,1534},{22,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -133,7 +133,7 @@
 			<key>teacher_3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{46,96},{19,31}}</string>
+				<string>{{0,1886},{19,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -147,7 +147,7 @@
 			<key>teacher_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{46,32},{20,31}}</string>
+				<string>{{0,1822},{20,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -161,7 +161,7 @@
 			<key>teacher_3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{46,64},{20,31}}</string>
+				<string>{{0,1854},{20,31}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -172,6 +172,90 @@
 				<string>{32,33}</string>
 			</dict>
 
+			<key>teacher_m_0.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,1337},{174,196}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{15,2},{174,196}}</string>
+				<key>sourceSize</key>
+				<string>{198,198}</string>
+			</dict>
+
+			<key>teacher_m_1.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,1337},{174,196}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{15,2},{174,196}}</string>
+				<key>sourceSize</key>
+				<string>{198,198}</string>
+			</dict>
+
+			<key>teacher_m_2.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,1140},{174,196}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{15,2},{174,196}}</string>
+				<key>sourceSize</key>
+				<string>{198,198}</string>
+			</dict>
+
+			<key>teacher_s_0.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{302,0},{301,1139}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{240,46},{301,1139}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>teacher_s_1.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{302,0},{301,1139}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{240,46},{301,1139}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>teacher_s_2.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,0},{301,1139}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{240,46},{301,1139}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
 		</dict>
 
 		<key>metadata</key>
@@ -179,7 +263,7 @@
 			<key>format</key>
 			<integer>2</integer>
 			<key>size</key>
-			<string>{128,128}</string>
+			<string>{1024,2048}</string>
 			<key>textureFileName</key>
 			<string>teacher.png</string>
 			</dict>
