1通りデバッグ 天弦楼改築

--- a/Resources/event/TOWER-1F-eastcorridor.json
+++ b/Resources/event/TOWER-1F-eastcorridor.json
@@ -391,7 +391,7 @@
 								},
 								{
 									"type":"charaMsg",
-									"text":["真夏ちゃん・・・蘭丸さん・・・"],
+									"text":["真夏ちゃん・・・らんまるさん・・・"],
 									"charaID":"6",
 									"imgID":"2"
 								},
@@ -444,7 +444,7 @@
 							"imgID":"2"
 						},
 						{
-							"text":["真夏ちゃーん、蘭丸さーん"],
+							"text":["真夏ちゃーん、らんまるさーん"],
 							"charaID":"6",
 							"imgID":"1",
 							"option":"reaction"
